# Prueba-Tecnica-CS

./: .gitignore  CMakeLists.txt  README.md
doc/: README.md
include/business/: business.h
include/client/: client.h
include/client_repository/: client_repository.h
include/crud_interface/: crud_interface.h
include/menu/: menu.h
include/profile/: profile.h
include/profile_collection/: profile_collection.h
include/profile_collection_manager/: profile_collection_manager.h
include/supplier/: supplier.h
include/supplier_repository/: supplier_repository.h
include/utility/: utility.h
src/business/: CMakeLists.txt  business.cc
src/client/: CMakeLists.txt  client.cc
src/client_repository/: CMakeLists.txt  client_repository.cc
src/main/: a.out  main.cc
src/menu/: CMakeLists.txt  menu.cc
src/profile/: CMakeLists.txt  profile.cc
src/profile_collection/: CMakeLists.txt  profile_collection.cc  profile_collection.h
src/profile_collection_manager/: profile_collection_manager.cc
src/supplier/: CMakeLists.txt  supplier.cc
src/supplier_repository/: CMakeLists.txt  supplier_repository.cc
src/utility/: CMakeLists.txt  utility.cc
